// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Before deleting users, check if expired tokens are removed 1`] = `
Array [
  Object {
    "created": "2022-01-01T11:00:00.000Z",
    "expiredAt": "2022-01-15T11:00:00.000Z",
    "id": "TOKEN:2035xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "principalType": "Hub",
    "ttl": 1209600,
    "userId": "dbId:HubRepository:1",
  },
  Object {
    "created": "2022-01-01T11:00:00.000Z",
    "expiredAt": "2022-01-15T11:00:00.000Z",
    "id": "TOKEN:2036xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "principalType": "user",
    "ttl": 1209600,
    "userId": "dbId:UserRepository:1",
  },
  Object {
    "created": "2022-01-01T11:00:00.000Z",
    "expiredAt": "2022-01-15T11:00:00.000Z",
    "id": "TOKEN:2037xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "principalType": "user",
    "ttl": 1209600,
    "userId": "dbId:UserRepository:2",
  },
]
`;

exports[`Before deleting users, check if expired tokens are removed 2`] = `
Array [
  Object {
    "created": "2022-01-16T11:00:00.000Z",
    "expiredAt": "2022-01-30T11:00:00.000Z",
    "id": "TOKEN:2038xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "principalType": "user",
    "ttl": 1209600,
    "userId": "dbId:UserRepository:1",
  },
]
`;

exports[`Before deleting users, check if oauth tokens from missing users are removed 1`] = `
Array [
  Object {
    "appId": "appId",
    "id": "1",
    "issuedAt": "2022-01-01T11:00:00.000Z",
    "refreshToken": "abcde",
    "userId": "nonExisting",
  },
]
`;

exports[`Before deleting users, check if orphaned fingerprints are removed. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "data": null,
    "id": "dbId:FingerprintRepository:10",
    "isTransformed": false,
    "locationId": "dbId:LocationRepository:1",
    "ownerId": "dbId:UserRepository:2",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "data": null,
    "id": "dbId:FingerprintRepository:3",
    "isTransformed": false,
    "locationId": "dbId:LocationRepository:3",
    "ownerId": "dbId:UserRepository:2",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "data": null,
    "id": "dbId:FingerprintRepository:8",
    "isTransformed": false,
    "locationId": "dbId:LocationRepository:2",
    "ownerId": "dbId:UserRepository:1",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;

exports[`Before deleting users, check if unused files are removed. 1`] = `
Array [
  Object {
    "chunkSize": 251200,
    "contentType": "binary/octet-stream",
    "filename": "image.jpg",
    "id": "dbId:FsFilesRepository:4",
    "length": 100,
    "uploadDate": "2022-01-01T11:00:00.000Z",
  },
]
`;

exports[`Before deleting users, check if unused files are removed. 2`] = `
Array [
  Object {
    "data": Object {
      "data": Array [
        97,
        98,
        99,
        100,
        101,
      ],
      "type": "Buffer",
    },
    "files_id": "dbId:FsFilesRepository:4",
    "id": "dbId:FsChunksRepository:5",
    "n": 0,
  },
]
`;

exports[`Before deleting users, check sanitation deletion counts 1`] = `
Object {
  "devices": Object {
    "appInstallations": 0,
    "deviceLocationsMap": 0,
    "deviceSphereMap": 0,
    "devices": 0,
    "fingerprintLinks": 0,
    "preferences": 0,
  },
  "files": Object {
    "chunks": 1,
    "files": 1,
  },
  "fingerprints": 3,
  "spheres": Object {
    "access": Object {
      "hubs": 0,
      "users": 0,
    },
    "hubs": 0,
    "locations": 0,
    "messages": Object {
      "messageStates": 0,
      "messageUsers": 0,
      "messages": 0,
    },
    "scenes": 0,
    "sphereKeys": 0,
    "spheres": 0,
    "stones": Object {
      "abilities": 0,
      "abilityProperties": 0,
      "behaviours": 0,
      "keys": 0,
      "stones": 0,
      "switchStates": 0,
    },
    "toons": 0,
    "trackingNumbers": 0,
  },
  "tokens": Object {
    "crownstoneTokens": 0,
    "oauthTokens": 0,
  },
}
`;

exports[`Delete member in sphere and run sanitation, check if all proper data is removed and if all shared data is kept. 1`] = `
Object {
  "appInstallation": Array [
    Object {
      "appName": "testApp",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "developmentApp": false,
      "deviceId": "dbId:DeviceRepository:3",
      "deviceType": "phone",
      "id": "dbId:AppInstallationRepository:3",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "crownstoneToken": Array [
    Object {
      "created": "2022-01-01T11:00:00.000Z",
      "expiredAt": "2022-01-15T11:00:00.000Z",
      "id": "TOKEN:2037xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
      "principalType": "user",
      "ttl": 1209600,
      "userId": "dbId:UserRepository:2",
    },
  ],
  "device": Array [
    Object {
      "address": "abc",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:DeviceRepository:3",
      "name": "sphere1_device",
      "ownerId": "dbId:UserRepository:2",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "devicePreferences": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:3",
      "id": "dbId:DevicePreferencesRepository:4",
      "property": "prop",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "value": true,
    },
  ],
  "fingerprint": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": null,
      "id": "dbId:FingerprintRepository:7",
      "isTransformed": false,
      "locationId": "dbId:LocationRepository:1",
      "ownerId": "dbId:UserRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": null,
      "id": "dbId:FingerprintRepository:9",
      "isTransformed": false,
      "locationId": "dbId:LocationRepository:3",
      "ownerId": "dbId:UserRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "fingerprintLinker": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:3",
      "fingerprintId": "dbId:FingerprintRepository:7",
      "id": "dbId:FingerprintLinkerRepository:7",
      "locationId": "dbId:LocationRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:3",
      "fingerprintId": "dbId:FingerprintRepository:5",
      "id": "dbId:FingerprintLinkerRepository:8",
      "locationId": "dbId:LocationRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:3",
      "fingerprintId": "dbId:FingerprintRepository:9",
      "id": "dbId:FingerprintLinkerRepository:9",
      "locationId": "dbId:LocationRepository:3",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "sphereAccess": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereAccessRepository:2",
      "invitePending": false,
      "role": "member",
      "sphereAuthorizationToken": "TOKEN:2012xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "userId": "dbId:UserRepository:2",
    },
  ],
  "user": Array [
    Object {
      "accountCreationPending": false,
      "createdAt": "1970-01-01T00:00:00.000Z",
      "email": "sphere1_member@test.com",
      "emailVerified": false,
      "id": "dbId:UserRepository:2",
      "language": "en_us",
      "new": true,
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "uploadDeviceDetails": true,
      "uploadLocation": true,
      "uploadSwitchState": true,
    },
  ],
}
`;
